fix(#11): header view & shift maket

--- a/src/components/layout/footer/footer.module.css
+++ b/src/components/layout/footer/footer.module.css
@@ -5,6 +5,7 @@
   align-items: center;
   color: var(--white, #FFFFFF);
   padding-block: 32px;
+  width: 100%;
 }
 
 .column_logo {
