--- a/src/components/sections/past-lesson/past-lesson.module.css
+++ b/src/components/sections/past-lesson/past-lesson.module.css
@@ -103,6 +103,9 @@
 }
 
 @media (width < 1440px) {
+  .pastLesson {
+    max-width: 100vw;
+  }
   .lesson_video div {
     background-position: center;
   }
