--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,7 +11,7 @@ body {
 }
 
 body {
-
+  display: grid;
   color: var(--dark-blue, #00313C);
   background: var(--white, #FFFFFF);
   font: var(--p-secondary, normal 500 24px/1.4, var(--Roboto), Arial, Helvetica, sans-serif);
